skrivefeil rettet i rapport

--- a/rapport/conclusion.tex
+++ b/rapport/conclusion.tex
@@ -1,3 +1,13 @@
 \chapter{Conclusion}
+\section{Discussion of the results}
+
 \section{Conclusion}
-\lipsum[1-3]
+The performed numerical simulations and experiments with bacon preparation
+in a microwave oven gave satisfactory results so far as they were implemented. 
+The numerical simulations of the heat equations gave reasonable results in agreement
+with experiments. An implementation of the transport equation would have been
+more satisfactory, and is suggested as a possibility for future work in this
+direction. The experiments performed suggest that the fat transport is
+complicated, and that gravity is not dominating the flow. 
+
+
