--- a/rapport/experiments.tex
+++ b/rapport/experiments.tex
@@ -19,22 +19,22 @@ resulted in fusing of the bacon and paper. Still we needed to absorb the fat
 output, so a compromise was to combine paper (for fat absorption) and
 grease-proof paper (preventing fat spillage). $\\$
 
-First we measured the weight of the wrapping (paper and grease-proof paper), and
-then we measured the dimensions of the bacon; weight, length, thickness and
-width. The bacon slice was wrapped and baked in the microwave oven for the
-desired amount of time. After completion we measured new dimensions, both of
-bacon and wrapping and assigned a number between 0.0-1.0 describing how crisp
-the bacon had gotten.
+First the weight of the wrapping was measured (paper and grease-proof paper), and
+then the dimensions of the bacon - weight, length, thickness and
+width - were measured. The bacon slice was wrapped and baked in the microwave oven for the
+desired amount of time. After completion new dimensions, both of
+bacon and wrapping were measured, and number between 0.0-1.0 describing the
+crispness of the bacon was assigned.
 
 \section{Measurements}
 
-First we measured weight gain in the wrapping, then weight loss in the bacon. We
-assumed that all gain in the wrapping came from fat absorption, and that the
+First weight gain in the wrapping was measured, then the weight loss in the
+bacon. It was assumed that all gain in the wrapping came from fat absorption, and that the
 weight loss in the bacon consisted of fat melting and water evaporation. The new
 dimensions of the bacon were also documented. $\\$
 
-The assumptions combined with our measurements made it possible to quantify fat
-loss, water loss and shrinkage of the bacon. This gave us the plots in
+The assumptions combined with the measurements made it possible to quantify fat
+loss, water loss and shrinkage of the bacon. This gave the plots in
 \cref{fig:thick_bacon} and \cref{fig:regular_bacon}.
 
 \begin{figure}[ht!]
@@ -47,17 +47,18 @@ bacon]{\label{fig:thick_bacon}\includegraphics[width=0.5\textwidth]{thick_bacon}
 
 \section{Results and discussion}
 
-As we can see in \cref{fig:thick_bacon} the water loss from 30-35 seconds is
-approximately constant, the fat loss on the other hand is increasing on the same
+As can be seen in \cref{fig:thick_bacon} the water loss from 30-35 seconds is
+approximately constant, while the fat loss is increasing on the same
 time interval. This shows that around 30-35 seconds fat starts to melt,
 ``stealing'' heat from the water, this is in correspondence with weight loss as
-a function of time. The fat loss continues to be linearly
-increasing up to about 50 seconds, see \cref{fig:regular_bacon}. After 50
+a function of time. The fat loss continues to increase linearly
+up to about 50 seconds, see \cref{fig:regular_bacon}. After 50
 seconds the fat loss stabilizes, indicating that no more fat can be lost, and
 that further baking time results in burnt bacon. $\\$
 
-These results coincides with our anticipations, that the weight loss would
-stabilize after a critical time. Something that is clearly demonstrated in
+These results agree with expectations that the weight loss would
+stabilize after a critical time, something that is clearly demonstrated in
 \cref{fig:baconplot}. It is worth commenting that the big variation in
 \cref{fig:regular_bacon} for $t = 50$s is due to one enormous (relative to the
 others) bacon slice.
+
