--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-%In this chapter, we don't need numbering of subsections (there are none).
+%In this chapter, we don't need numbering of subsections.
 \setcounter{secnumdepth}{1}
 
 \section{Problem formulation}
@@ -8,14 +8,30 @@ defined as cured meat from side and back cuts of a pig. A microwave oven in this
 household appliance typically delivering 750 W of microwave effect at a frequency of 2.1 GHz
 to a Faraday cage of volume 40 liters. 
 
-The motivation for the problem formulation was clear. As soon as modeling of food preparation was
+Previous work done in the field of pork preparation
+\cite{pork-cooking-diffusion}, \cite{pork-chops} is mainly based on
+traditional methods, suggesting that microwave preparation is
+a field in need of further study. In \cite{deepfrying}, the authors studied the preparation of
+pork in a fat-rich environment. \cite{nykvist} studied the effect of microwaves on meat for
+food preparation. Work done concerning dangerous substances in
+prepared bacon is performed in \cite{bacon-safety-original}, \cite{bacon-safety-micro}, suggesting that traditionally prepared
+bacon may pose a slight health risk, while microwave preparation yielded the
+lowest concentrations of Nitrosopyrrolidine, according to the experiments
+performed in \cite{bacon-safety-micro}.
+The practice of numerically simulating food preparation has increased in recent
+years \cite{meat-cooking-numerical}, \cite{chicken-numerics}, and it is now
+possible to take advantage of recent advances in computing power to perform these 
+simulations on commodity hardware.
+
+The personal motivation for the problem formulation was clear. As soon as modeling of food preparation was
 brought on the table, bacon seemed a prime choice. A microwave oven may seem an odd choice for
 bacon, but previous experiments have shown that optimal bacon can consistently be attained with this
 preparation method. Obvious advantages over traditional bacon preparation include less cleaning up
-to do afterwards and a shorter time-to-plate. The caveat is that microwave preparation is less
+to do afterwards and a shorter time-to-plate, in addition to health benefits as
+outlined above. The caveat is that microwave preparation is less
 suitable for feedback during the cooking process, as the bacon is obscured from view. To the
 traditional bacon chef, used to a touch-and-go approach, this is an obstacle to implementation, as
-overcooking bacon in a microwave oven yields inedible results. The
+overcooking bacon in a microwave oven easily yields inedible results. The
 purpose of this work, then, is to establish reliable numerical simulations that can serve as a basis
 for estimating cooking time for an arbitrary slice of bacon.
 
@@ -35,9 +51,9 @@ exists. With a numerical solution of the heat and mass transport equations, the
 optimal preparation time can be predicted. But this presumes an understanding of
 what makes good bacon. So what does?
 
-Work done by \cite{intarwebz} and \cite{maillard} suggest that two factors are important in
+Work done by \cite{maillard} and \cite{intarwebz} suggests that two factors are important in
 determining good bacon. The first is a high enough temperature that the Maillard
-reaction can take place, which happens around 140$^{circ}$C. The second is that
+reaction can take place, which happens around 140 \textdegree C. The second is that
 a significant proportion of the fat has melted and has been transported out of
 the bacon. Both of these factors are naturally affected by the composition of
 the bacon; especially water and fat content will play a major role.
@@ -50,11 +66,12 @@ subjective question - different people prefer different grades of crispness.
 Another experimental question is how much of the microwave effect that is
 absorbed by the bacon. The second law of thermodynamics dictates that some of
 the effect is lost in the microwave magnetron, the question is how much effect
-is dissipated in the bacon. This may include losses besides that of the
+is dissipated in the bacon. This may also include losses besides that of the
 magnetron, which has a typical efficiency of 65\% \cite{namba}. It turns out
 that common household microwave ovens are rated to include this loss,
 with standardized calibration procedures published by the IEC's SC 59K, so a 750 W
-microwave oven will typically draw 1.1 kW of electrical power from the mains
+microwave oven will actually output 750 W of cooking energy into the cooking
+chamber, while typically drawing 1.1 kW of electrical power from the mains
 socket. This means using the rated power will be good enough for our purposes.
 
 Finally, experiments are needed to verify the accuracy of the numerical results.
