Skrevet endel på kapittel 5

--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -113,7 +113,7 @@ med å stå foran en mengde blir lavere. ``Humor tends to promote cohesiveness a
 \section{Bruk av regler/kontrakt}
 %Situasjon: Knut Halvor og språk på prosessrapport
 
-Gruppen ble tidlig enig om at prosjektrapporten skulle skrive på engelsk, så på
+Gruppen ble tidlig enig om at prosjektrapporten skulle skrives på engelsk, så på
 dette punktet oppnådde vi, i overenstemmelse med samarbeidskontrakten (appendiks
 XXXXXX) - en konsensusavgjørelse. Da gruppa skulle avgjøre språket i
 prosessrapporten ble det større problemer. Knut Halvor og Paul var veldig for å
@@ -130,25 +130,91 @@ derfor brukt mye tid på å prøve og nå nettopp det. Etter godt og vel en time
 diskutering skjærte derfor Knut Halvor i gjennom og ba om en
 flertallsavgjørelse. Dette er i henhold til gruppas beslutningsmønster, som sier
 at ved manglende konsensus skal flertallet bestemme. Avstemmingen resulterte i
-at prosessrapporten skulle skrives på bokmål. \\
-
-Paul skriver i sin private logg ``selv om jeg var uenig i at rapporten skulle
+at prosessrapporten skulle skrives på bokmål. Paul skriver i sin private logg ``selv om jeg var uenig i at rapporten skulle
 skrives på norsk, gjør prosessen rundt avgjørelsen det lettere å takle
-`nederlaget'''. Dette viser bare at Johnson \& Johnson sin teori \cite{jj} om
+`nederlaget' ''. Dette viser bare at Johnson \& Johnson sin teori \cite{jj} om
 hvordan å få ulikheter blant gruppemedlemmene til å styrke gruppen fungerer i
 praksis. \\
 
+Dette illustrerer godt at gruppemedlemmenes personlige egenskaper er rimelig
+like på et grunnleggende nivå. Ingen på gruppa er kverulerende i den forstand at
+når de først har bestemt seg, så må det gjøres på hans/hennes måte. Overført til
+denne situasjonen; selv om Knut \emph{egentlig} vil skrive på
+engelsk innser han at det aldri vil nås konsensus og foreslår
+flertallsavgjøring. På den måten sørger han for at effektiviteten ikke går ned
+til null, men tvinger fremgang ut av en fastlåst situasjon. 
+
 %Situasjon: Rapportering da Joakim var syk
 Et annet eksempel på anvendelse av samarbeidskontrakten var da Joakim lå syk. I
-gruppeloggen står det ``Joakim sendte sms til gruppa før oppmøte, han handler
+gruppeloggen står det ``Joakim sendte SMS til gruppa før oppmøte, han handler
 dermed i tråd med gruppekontrakten som sier; `gi beskjed dersom du ikke kan
 møte'.'' Turid skriver i dagboka ``Det var greit å få beskjed om at Joakim var
 syk på starten av dagen. På denne måten ble ikke gruppa unødvendig heftet i form
-av å vente på siste person.'' Dette viser at nevnte punkt fungerer godt i
-praksis, og at det har evnen til å gjøre noe som, i utgangspunktet - er negativt
-om til en positiv gruppeerfaring.
+av å vente på siste person.'' Her ser vi godt at noe som kunne være årsaken til
+en situasjon, blir avverget i form av klare regler/avtaler mellom
+gruppemedlemmene. Og noe som potensielt kunne skadet gruppeånden (ved at Joakim
+bare hadde holdt seg hjemme, for først å si fra senere på dagen), bidrar til å
+styrke den. Med å styrke gruppeånden menes at de resterende gruppemedlemmene ser
+at reglene brukes aktivt, og at Joakim tar hensyn og etterfølger disse. Dette
+bidrar til økt tillit mellom gruppemedlemmene.
+
 
 \section{Teori vs. virkelighet}
-%Humor, selvironi, selvhøytidelighet - stemmer bra jamført teori 
-%Situasjon: ``In your face!'' fra Turid til Joakim om Crank og stabilitet
+%Humor, selvironi, selvhøytidelighet - stemmer bra jamført teori
+En teori vi lærte om veldig tidlig var Schwarz' grupperegler for effektivt
+samarbeid \cite{cref}. Gruppa brukte tid på å sette seg inn i disse, slik at
+hvert enkelt medlem skulle ha en felles forståelse av hvordan effektivt
+gruppearbeid fungerte. Dette var lærdom som ble brukt titt og ofte, spesielt i
+forbindelse med gruppelogger. Vi ble derfor overrasket da vi omtrent halvveis ut
+i prosjektet så at medlemmene ikke hadde oversikt fremgangen, og at dette var et
+direkte brudd på regel nummer 7: ``Utform fremgangsplan og tilbakemeldingsmåter
+i plenum''. Mangelen på en fremdriftsplan hadde ført til at enkelte
+gruppemedlemmer begynte å bli stresset, Turid skriver i sin private logg ``jeg
+begynner å bli stresset, og er redd for at vi ikke skal bli ferdig i tide''.
+$\\$
 
+Neste landsbydag luftet Turid frustrasjonen under kaffemøtet, det viste seg at
+Joakim, Paul og Knut følte det på samme måte, mens Åsmund hadde rimelig god
+oversikt. Dette hadde sin naturlige årsak i at Åsmund tidlig hadde påtatt seg
+rollen som layout-ansvarlig, og at alt nytt materiale gikk til han. Det ble
+derfor meget tydelig at målt fremdrift måtte formaliseres, slik at hver enkelt
+kunne få tilgang til nåværende status. Det ble derfort gjennomført en revisjon
+av samarbeidskontrakten (se \cref{sec:samarbeid}), i form av et punkt om oppføring av
+status og fremdriftsplan fra gang til gang. Vi erfarer her at
+tilbakemeldingssystemet innad i gruppa fungerer, selv om det tok litt lang tid
+før problemet ble oppdaget, i tillegg ser vi at gruppereglene til Scharwz
+(\cref{tab:grupperegler}) har noe for seg, og at å droppe kun én faktisk
+resulterer i lavere effektivitet.
+
+
+%Situasjon: ``In your face!'' fra Turid til Joakim om Crank og stabilitet
+Ved oppstart ble det tidlig diskutert hvilket diskretiseringsskjema som skulle
+brukes på differensiallignignene. Da diskusjonen peilet seg inn på
+Crank-Nicolson-skjemaet ble påpekte Turid at dette var ubetinget stabilt. Dette
+sa Joakim seg uenig i, da han mente å huske noe om ustabilitet i forbindelse med
+nevnte skjema. Argumentene utviklet seg etterhvert til å bli rimelig usaklige, i
+form av Turids ``jo, den er stabil'' mot Joakims ``nei, den er ustabil'', man
+kan vel også legge til at stemningen bygget seg noe opp. Det endte med at Åsmund
+sjekket ut Crank-Nicolson-skjemaet på wikipedia, hvor det i en av de første
+setningene stod: ``spesielt kan nevnes at Crank-Nicolson-skjemaet er
+\emph{ubetinget} stabilt''. I seiersrus avsluttet Turid diskusjonen med å sende
+avgårde en ``ìn your face'' til Joakim. $\\$
+
+ Det ble likevelt sagt med et smil om munnen, noe også Joakim oppfattet. 
+Og det hele gruppa lo av situasjonen i ettertid. Knut skriver i sin personlige
+logg ``Vi hadde en potensiell situasjon idag mellom Turid og Joakim, heldigvis
+lo alle parter av det, virker som det er god humor blant gruppemedlemmene''.
+
+Likevel kan man i etter-på-klokskapens lys se potensielle faremomenter
+i hendelsen. Joakim kunne tatt seg nær av det Turid sa, og valgt å holde sine
+meninger for seg selv fremover, i frykt for å bli latterliggjort igjen. Men, i
+egenskap av et gruppens medlemmer ikke tar seg selv så høytidelig ble dette en
+situasjon som bidro til at vi ble bedre kjent. I form av at vi så at det er/var
+rimelig stor takhøyde for hva som kunne bli sagt, dette har utvilsomt påvirket
+kommunikasjonen i ettertid. Og gjort at kritikk lettere
+har kommet frem, og at hvert gruppemedlem heller ikke har vært redd for å motta
+den. Man kan godt si at gruppemedlemmens sammenfallende humoristiske sans har
+gjort grensene og tersklene for å ta opp ``ubehagelige'' ting lavere, da du som
+avsender av den dårlige nyheten vet at mottakeren ikke stenger seg inne ved å
+høre det du har tenkt å si. Vi observerer altså her at teorien som tar for seg
+humor (\cite{jj-humor} og \cref{Kommunikasjonsteori}) stemmer meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
