--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -42,7 +42,7 @@ Det at egen selvoppfatning passer overens med gruppas oppfatning, viser at me ha
 forståelse av uttrykksmåtene til dei andre medlemmene på gruppen. Dette viser at gruppemedlemmer
 klarer å formidle hva de presenterer/står for på ein slik måte at andre sitter igjen med det samme bilde 
 som gruppemedlemmet prøver å formidle. Dette viser tilbake til ein effektiv kommunikasjon på gruppen 
-(\ref{Kommunikasjonsteori}).\\
+(\ref{sec:kommunikasjonsteori}).\\
 
 Gruppelogg 4:
 Det noteres at gruppedynamikken har blitt ganske god iløpet av disse ukene, og
@@ -73,7 +73,8 @@ med. I tillegg satt kaffemøte en offisiell start på dagen, og bidrog til et st
 
 Andre tiltak?\\
 
-Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i gruppen (\ref{Kommunikasjonsteori}). Vi har selv
+Miljøet og fysiske faktorer kan ha en stor innvirkning på kommunikasjonen i
+gruppen (\ref{sec:kommunikasjonsteori}). Vi har selv
 merket at kommunikasjonen ofte blir skarpere og mer ampert når vi har jobbet over en lengre og
 intensiv periode uten pauser. Dette har vi prøvd å gjort noe med ved å være flinkere til å ta
 pauser. Spesielt når noen merker at andre medlemmer på gruppa begynner å bli slitne og irritable
@@ -85,7 +86,8 @@ dynamikken i gruppen. Vi arrangerte bordet vi satt rundt som et kvadrat. Det var
 plasser rundt bordet som gav en høyere status til noen av medlemmene, noe som understreker den 
 flate strukturen på gruppen.)\\
 
-En annen viktig faktor på gruppen som lettet kommunikasjonen på gruppen er bruk av humor (\ref{Kommunikasjonsteori}). Dette er noe
+En annen viktig faktor på gruppen som lettet kommunikasjonen på gruppen er bruk
+av humor (\ref{sec:kommunikasjonsteori}). Dette er noe
 som går igjen i gruppen vår. Helt frå begynnelsen har det vært en lett og god stemning mellom gruppemedlemmene. 
 Dette gjør at vi har en lavere terskel for å uttrykke sterke meninger eller uenigheter. Vi har og en høy grad 
 av selvironi på gruppen. Det at gruppemedlemmer ikke tar seg selv så høytidelige, gjør at det blir lettere å ta 
@@ -162,7 +164,7 @@ bidrar til økt tillit mellom gruppemedlemmene.
 \section{Teori vs. virkelighet}
 %Humor, selvironi, selvhøytidelighet - stemmer bra jamført teori
 En teori vi lærte om veldig tidlig var Schwarz' grupperegler for effektivt
-samarbeid \cite{cref}. Gruppa brukte tid på å sette seg inn i disse, slik at
+samarbeid (\cref{sec:schwarz}). Gruppa brukte tid på å sette seg inn i disse, slik at
 hvert enkelt medlem skulle ha en felles forståelse av hvordan effektivt
 gruppearbeid fungerte. Dette var lærdom som ble brukt titt og ofte, spesielt i
 forbindelse med gruppelogger. Vi ble derfor overrasket da vi omtrent halvveis ut
@@ -179,11 +181,11 @@ oversikt. Dette hadde sin naturlige årsak i at Åsmund tidlig hadde påtatt seg
 rollen som layout-ansvarlig, og at alt nytt materiale gikk til han. Det ble
 derfor meget tydelig at målt fremdrift måtte formaliseres, slik at hver enkelt
 kunne få tilgang til nåværende status. Det ble derfort gjennomført en revisjon
-av samarbeidskontrakten (se \cref{sec:samarbeid}), i form av et punkt om oppføring av
+av samarbeidskontrakten (se \cref{sec:kontrakt}), i form av et punkt om oppføring av
 status og fremdriftsplan fra gang til gang. Vi erfarer her at
 tilbakemeldingssystemet innad i gruppa fungerer, selv om det tok litt lang tid
 før problemet ble oppdaget, i tillegg ser vi at gruppereglene til Scharwz
-(\cref{tab:grupperegler}) har noe for seg, og at å droppe kun én faktisk
+(\cref{tab:grunnregler}) har noe for seg, og at å droppe kun én faktisk
 resulterer i lavere effektivitet.
 
 
@@ -217,4 +219,4 @@ den. Man kan godt si at gruppemedlemmens sammenfallende humoristiske sans har
 gjort grensene og tersklene for å ta opp ``ubehagelige'' ting lavere, da du som
 avsender av den dårlige nyheten vet at mottakeren ikke stenger seg inne ved å
 høre det du har tenkt å si. Vi observerer altså her at teorien som tar for seg
-humor (\cite{jj-humor} og \cref{Kommunikasjonsteori}) stemmer meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
+humor (\cite{jj-humor} og \cref{sec:kommunikasjonsteori}) stemmer meget godt med humors innvirkning på gruppeprosesser i virkeligheten.
