--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -186,7 +186,7 @@ status og fremdriftsplan fra gang til gang. Vi erfarer her at
 tilbakemeldingssystemet innad i gruppa fungerer, selv om det tok litt lang tid
 før problemet ble oppdaget, i tillegg ser vi at gruppereglene til Scharwz
 (\cref{tab:grunnregler}) har noe for seg, og at å droppe kun én faktisk
-resulterer i lavere effektivitet.
+resulterer i lavere effektivitet. \\
 
 
 %Situasjon: ``In your face!'' fra Turid til Joakim om Crank og stabilitet
