--- a/prosess/referanser.bib
+++ b/prosess/referanser.bib
@@ -35,4 +35,13 @@
 	chapter="5: I grupparbete spelar rollerna roll",
 	publisher="Studentlitteratur, Lund",
 	year="2005"
-}	
+}
+
+@inbook{jj-humor,
+	author="David W. Johnson \& Roger T. Johnson",
+	title="Joining together. Group theory and group skills",
+	chapter="4: Communication Within Groups",
+	publisher="Pearson",
+	year="2006"
+}
+	
