--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -1,5 +1,6 @@
 \chapter{Teori}
 \section{Schwarz - gruppeteori}
+\label{sec:schwarz}
 \subsection{Effektivitet}
 
 
@@ -176,6 +177,7 @@ Punkt 7 dreier seg om normer, dvs. regler om medlemmenes oppførsel og hva som s
 Punkt 8 diskuterer karaktertrekk ved god gruppesamarbeid. Disse er bl.a. god kommunikasjon, vennlig atmosfære, stor innsatsvilje, og stor grad av arbeidsfordeling.\\
 
 \section{Kommunikasjonsteori}
+\label{sec:kommunikasjonsteori}
 
 %look at patterns of group communication and the variables that influence communication effectiveness
 %
