--- a/prosess/innledning.tex
+++ b/prosess/innledning.tex
@@ -1,3 +1,3 @@
 \chapter{Innledning}
 \section*{Innledning}
-Her skal innledningen stå. Pass på å sitere \cite{schwartz}.
+Her skal innledningen stå. Pass på å sitere \cite{schwarz}.
